Water tank water production show feature (#14)
* update-build-script

* Railcraft WaterTank, show current water production rate

* Update Railcraft version

* Call getOutsideRate() only if getIsOutside()

* Removed magic number, made conversion rate -> L/s in Calculator's static method.

* Remove unnecessary this keyword

* Remove unnecessary static keywords

--- a/src/main/resources/assets/wailaplugins/lang/en_US.lang
+++ b/src/main/resources/assets/wailaplugins/lang/en_US.lang
@@ -102,6 +102,12 @@ wp.hud.msg.energyStored=Stored: %s
 wp.hud.msg.charge=Charge: %s
 wp.hud.msg.needMeter=Hold Charge Meter
 
+wp.hud.msg.currentRate=Current rate: %d (%d L/s)
+wp.hud.msg.biomeHumidityRate=Biome humidity rate: %d
+wp.hud.msg.rainingRate=Raining rate: %d
+wp.hud.msg.snowingRate=Snowing rate: %d
+wp.hud.msg.cantSeeTheSkyRate=Can't see the sky rate: %d
+
 wp.config.Railcraft.charge=Show Charge
 wp.config.Railcraft.energy=Show RF Energy
 wp.config.Railcraft.engines=Show Engine Info
